k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voyeur
  labels:
    app.kubernetes.io/name: voyeur
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: voyeur
  template:
    metadata:
      labels:
        app.kubernetes.io/name: voyeur
    spec:
      containers:
      - name: voyeur
        image: papakao/voyeur:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: voyeur
  labels:
    app.kubernetes.io/name: voyeur
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: voyeur
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voyeur-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-XSS-Protection: 1; mode=block";
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/certificate-name: peoplesystem-tls
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - peoplesystem.tatdvsonorth.com
    secretName: peoplesystem-tls
  rules:
  - host: peoplesystem.tatdvsonorth.com
    http:
      paths:
      - path: /voyeur/static(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: voyeur
            port:
              number: 80
      - path: /voyeur(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: voyeur
            port:
              number: 80
